fixed alignment of audio

--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ body {
     position: absolute;
     bottom: 50px;
     left:50px; 
+    padding: 1px 1px;
   }
 
 /* Instructions Modal */
@@ -118,7 +119,7 @@ body {
     color: white;
     font-size: 80%;
     width: 50%;
-    margin-top: 20px;
+    margin-top: -5px;
     margin-left: 138px;
     text-align: center;
 }
@@ -135,7 +136,7 @@ body {
     max-width: 100%;
     min-width: 140px;
     padding: 10px 15px;
-    margin-top: 20px;
+    margin-top: 5px;
     margin-left: 170px;
     cursor: pointer;
     filter: drop-shadow(5px 5px 1px rgba(0, 0, 0, 0.25));  
@@ -306,7 +307,7 @@ In CSS, :after creates a pseudo-element that is the last child of the selected e
 .buttonWrapper2{
     width: 530px;
     height: 50px;
-    margin-top: 1px;
+    margin-top: -10px;
     text-align: center;
     flex-wrap: wrap;
 }
